--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -19,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar_home"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/color_primary"
@@ -28,12 +29,13 @@
         app:navigationContentDescription="Back"
         app:navigationIcon="@drawable/back_arrow_icon" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/water_button"
+    <Button
+        android:id="@+id/humidity_button"
         style="@style/HomeButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/humidity_text"
+        android:clickable="true"
         android:textAppearance="@style/ButtonTextStyle"
         app:icon="@drawable/water_icon"
         app:layout_constraintBottom_toTopOf="@+id/temperature_button"
@@ -52,7 +54,7 @@
         app:layout_constraintBottom_toTopOf="@id/light_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/water_button" />
+        app:layout_constraintTop_toBottomOf="@id/humidity_button" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/light_button"
