commit from android

--- a/app/src/main/res/drawable/back_arrow_icon.xml
+++ b/app/src/main/res/drawable/back_arrow_icon.xml
@@ -1,20 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="40dp"
-    android:height="40dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512">
-  <path
-      android:pathData="M244,400l-144,-144l144,-144"
-      android:strokeLineJoin="round"
-      android:strokeWidth="48"
-      android:fillColor="#00000000"
-      android:strokeColor="@color/color_secondary"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M120,256L412,256"
-      android:strokeLineJoin="round"
-      android:strokeWidth="48"
-      android:fillColor="#00000000"
-      android:strokeColor="@color/color_secondary"
-      android:strokeLineCap="round"/>
+    android:width="60dp"
+    android:height="60dp"
+    android:viewportWidth="1024"
+    android:viewportHeight="1024">
+
+    <path
+        android:fillColor="@color/color_tertiary"
+        android:pathData="M669.6,849.6c8.8,8 22.4,7.2 30.4,-1.6s7.2,-22.4 -1.6,-30.4l-309.6,-280c-8,-7.2 -8,-17.6 0,-24.8l309.6,-270.4c8.8,-8 9.6,-21.6 2.4,-30.4 -8,-8.8 -21.6,-9.6 -30.4,-2.4L360.8,480.8c-27.2,24 -28,64 -0.8,88.8l309.6,280z" />
+
 </vector>
