--- a/app/src/main/res/layout/welcome_layout.xml
+++ b/app/src/main/res/layout/welcome_layout.xml
@@ -8,23 +8,24 @@
     android:background="@color/color_primary"
     tools:context=".MainActivity">
 
-<!--    <ImageView
+    <ImageView
         android:id="@+id/loggo_image"
         android:layout_width="350dp"
         android:layout_height="350dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:src="@drawable/logo"
         app:layout_constraintBottom_toTopOf="@id/get_started_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />-->
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/get_started_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
+        android:layout_marginTop="80dp"
         android:width="250dp"
         android:height="60dp"
         android:backgroundTint="@color/color_quaternary"
@@ -32,12 +33,12 @@
         android:focusable="true"
         android:text="@string/get_started_string"
         android:textColor="@color/color_tertiary"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/loggo_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintBottom_toTopOf="@id/property_text"/>
 
-<!--    <TextView
+    <TextView
         android:id="@+id/property_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -46,6 +47,6 @@
         android:textColor="@color/color_quaternary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />-->
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
