--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/welcomeFragment"
-        android:name="com.greenhouse.greenhouseapp.WelcomeFragment"
+        android:name="com.greenhouse.greenhouseapp.fragments.WelcomeFragment"
         android:label="WelcomeFragment" >
         <action
             android:id="@+id/action_welcomeFragment_to_homeFragment"
@@ -14,7 +14,7 @@
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.greenhouse.greenhouseapp.HomeFragment"
+        android:name="com.greenhouse.greenhouseapp.fragments.HomeFragment"
         android:label="HomeFragment" >
         <action
             android:id="@+id/action_homeFragment_to_welcomeFragment"
