--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transparent">#00FFFFFFFF</color>
     <color name="color_primary">#cadbb7</color>
     <color name="color_secondary">#93a267</color>
     <color name="color_tertiary">#fbfbfb</color>
     <color name="color_quaternary">#485935</color>
+    <color name="color_progress_indicator">#74c9f7</color>
+    <color name="color_track_indicator">#ededed</color>
 </resources>
