--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="ButtonTextStyle">
+    <style name="GenericStyle">
         <item name="android:textSize">@dimen/text_button</item>
         <item name="android:textColor">@color/color_tertiary</item>
     </style>
@@ -13,5 +13,54 @@
         <item name="android:width">@dimen/button_medium</item>
         <item name="iconSize">36dp</item>
         <item name="iconPadding">0dp</item>
+    </style>
+
+    <style name="Toolbar.Text.Style" parent="GenericStyle">
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textSize">28sp</item>
+    </style>
+
+    <style name="Plant.Status.Text.Big" parent="Toolbar.Text.Style">
+        <item name="android:textSize">56sp</item>
+    </style>
+
+    <style name="Plant.Status.Text.Medium" parent="Toolbar.Text.Style">
+        <item name="android:textSize">32sp</item>
+    </style>
+
+    <style name="Plant.Status.Text.Small" parent="Toolbar.Text.Style">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="WelcomeTextStyle" parent="Toolbar.Text.Style">
+        <item name="android:textSize">36sp</item>
+        <item name="android:textColor">@color/color_tertiary</item>
+        <item name="android:letterSpacing">0.4</item>
+        <item name="android:fontFamily">@font/poppins_extra_light</item>
+    </style>
+
+    <style name="UserTextStyle" parent="Toolbar.Text.Style">
+        <item name="android:textSize">36sp</item>
+        <item name="android:textColor">@color/color_tertiary</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/poppins_extra_light</item>
+    </style>
+
+    <style name="CircularProgressIndicator.Text.Percent">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/color_progress_indicator</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Widget.Material3.CircularProgressIndicator.Style">
+        <item name="android:max">100</item>
+        <item name="android:progress">60</item>
+        <item name="indicatorColor">@color/color_progress_indicator</item>
+        <item name="trackColor">@color/color_track_indicator</item>
+    </style>
+
+    <style name="CircularProgressIndicator.Text.Label">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/color_progress_indicator</item>
     </style>
 </resources>
